--- a/src/app/components/produits/produits.component.css
+++ b/src/app/components/produits/produits.component.css
@@ -1,4 +1,4 @@
-.top-10-container {
+.chart-container {
     width: 80%;
     margin: auto;
     text-align: center;
@@ -10,30 +10,3 @@
     margin-bottom: 20px;
   }
   
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    background: #fff;
-  }
-  
-  th, td {
-    padding: 12px;
-    text-align: center;
-    border-bottom: 1px solid #ddd;
-  }
-  
-  th {
-    background-color: #4a90e2;
-    color: white;
-  }
-  
-  .rank {
-    font-weight: bold;
-    color: #e67e22;
-  }
-  
-  .score {
-    font-weight: bold;
-    color: #2ecc71;
-  }         
