--- a/src/app/components/filters/filters.component.html
+++ b/src/app/components/filters/filters.component.html
@@ -8,7 +8,6 @@
     <input id="fabID" type="number" [(ngModel)]="fabID" placeholder="Entrer FabID" (change)="onFabIDChange()">
   </div>
   
-  <!-- ✅ Ajout du KPI Magasins -->
+  <!-- ✅ Affichage du nombre de magasins et de fabricants -->
   <app-store-count [catID]="catID"></app-store-count>
-  
   
