graphique 3barres mais bug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-produits></app-produits>
+<ng-container *ngIf="isBrowser">
+    <app-stats></app-stats>
+  </ng-container>
+  
+  
