--- a/src/app/components/filters/filters.component.html
+++ b/src/app/components/filters/filters.component.html
@@ -14,6 +14,15 @@
       <input id="fabID" type="number" [(ngModel)]="fabID" placeholder="Entrer FabID" (change)="onFabIDChange()">
     </div>
 
+    <!-- Sélecteur de période (saison) -->
+    <div>
+      <label for="periode">Période :</label>
+      <select id="periode" (change)="onPeriodeChange($event)">
+        <option value="" selected>Choisir une période</option>
+        <option *ngFor="let periode of periodes" [value]="periode.label">{{ periode.label }}</option>
+      </select>
+    </div>
+
     <!-- Sélection de dates -->
     <div>
       <label for="dateDebut">Date début :</label>
@@ -28,6 +37,7 @@
     </div>
   </div>
 </div>
+
 
   <!-- ✅ Affichage du nombre de magasins et de fabricants -->
  <app-store-count [catID]="catID" [date_debut]="date_debut" [date_fin]="date_fin"></app-store-count>
