--- a/src/app/components/store-count/store-count.component.html
+++ b/src/app/components/store-count/store-count.component.html
@@ -12,5 +12,11 @@
       <p *ngIf="avgProductsPerFab !== null">{{ avgProductsPerFab | number:'1.2-2' }}</p>
       <p *ngIf="avgProductsPerFab === null">Sélectionner une période</p>
     </div>
+
+    <div class="store-count-card">
+      <h3>Nombre de Concurrents</h3>
+      <p>{{ totalFabricants ?? 'Chargement...' }}</p>
+    </div>
+    
   </div>
   
