--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
   <ul class="nav-links">
     <li><a href="/">🏠 ACCUEIL</a></li>
     <li><a href="/stats">📊 STATS</a></li>  <!-- ✅ Redirection vers la nouvelle page -->
-    <li><a href="#">📦 DÉTAILS PRODUITS</a></li>
+    <li><a [routerLink]="['/detail-produit']">🔍 Détail Produit</a></li>
     <li><a href="#">🔐 SE CONNECTER</a></li>
   </ul>
 </nav>
