--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,6 +6,6 @@
     <li><a href="/">🏠 ACCUEIL</a></li>
     <li><a href="/stats">📊 STATS</a></li>  <!-- ✅ Redirection vers la nouvelle page -->
     <li><a [routerLink]="['/detail-produit']">🔍 Détail Produit</a></li>
-    <li><a href="#">🔐 SE CONNECTER</a></li>
+    <a routerLink="/se-connecter">🔒 Se Connecter</a>
   </ul>
 </nav>
