--- a/src/app/components/produits/produits.component.html
+++ b/src/app/components/produits/produits.component.html
@@ -1,2 +1,2 @@
 <app-filters (filterChange)="updateFilters($event)"></app-filters>
-<app-graph [catID]="catID" [fabID]="fabID"></app-graph>
+<app-graph [catID]="catID" [fabID]="fabID" [date_debut]="date_debut" [date_fin]="date_fin"></app-graph>
