--- a/src/app/components/produits/produits.component.html
+++ b/src/app/components/produits/produits.component.html
@@ -1,2 +1,6 @@
 <app-filters (filterChange)="updateFilters($event)"></app-filters>
+
+<!-- ✅ Ajout de StoreCount ici -->
+<app-store-count [catID]="catID" [date_debut]="date_debut" [date_fin]="date_fin"></app-store-count>
+
 <app-graph [catID]="catID" [fabID]="fabID" [date_debut]="date_debut" [date_fin]="date_fin"></app-graph>
