--- a/src/app/components/produits/produits.component.html
+++ b/src/app/components/produits/produits.component.html
@@ -1,5 +1,2 @@
-
-<!-- ✅ Ajout de StoreCount ici -->
-<app-store-count [catID]="catID" [date_debut]="date_debut" [date_fin]="date_fin"></app-store-count>
-
+<app-filters (filterChange)="updateFilters($event)"></app-filters>
 <app-graph [catID]="catID" [fabID]="fabID" [date_debut]="date_debut" [date_fin]="date_fin"></app-graph>
