--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-header></app-header>
+<!--<app-filters (filterChange)="updateFilters($event)"></app-filters>-->
 
 <!-- ✅ Filtre global -->
-<app-filters (filterChange)="updateFilters($event)"></app-filters>
+
+<!--<app-filters (filterChange)="updateFilters($event)"></app-filters>-->
 
 <router-outlet></router-outlet>  <!-- ✅ C'est ici que les composants changent selon la route -->
