--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,9 +3,10 @@
     <span class="icon">🚢</span> Bateau de Thibault
   </div>
   <ul class="nav-links">
-    <li><a href="/">🏠 ACCUEIL</a></li>
-    <li><a href="/stats">📊 STATS</a></li>  <!-- ✅ Redirection vers la nouvelle page -->
-    <li><a [routerLink]="['/detail-produit']">🔍 Détail Produit</a></li>
-    <a routerLink="/se-connecter">🔒 Se Connecter</a>
+    <li><a href="/">🏠 graph1</a></li>
+    <li><a href="/stats">📊 graph stats</a></li>  <!-- ✅ Redirection vers la nouvelle page -->
+    <li><a [routerLink]="['/detail-produit']">graph3courbe</a></li>
+    <li><a routerLink="/se-connecter">graph_avg</a></li>
+
   </ul>
 </nav>
