--- a/src/app/components/produits/produits.component.html
+++ b/src/app/components/produits/produits.component.html
@@ -1,3 +1,3 @@
-<app-filters (filterChange)="updateFilters($event)" [showAllCategories]="false"></app-filters>
+<app-filters (filterChange)="updateFilters($event)" [showAllCategories]="false"></app-filters> <!-- ✅ Ajout du paramètre -->
 <app-store-count [catID]="catID" [date_debut]="date_debut" [date_fin]="date_fin"></app-store-count>
 <app-graph [catID]="catID" [fabID]="fabID" [date_debut]="date_debut" [date_fin]="date_fin"></app-graph>
