--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,6 +7,7 @@
     <li><a href="/stats">📊 graph stats</a></li>  <!-- ✅ Redirection vers la nouvelle page -->
     <li><a [routerLink]="['/detail-produit']">graph3courbe</a></li>
     <li><a routerLink="/se-connecter">graph_avg</a></li>
+    <li><a routerLink="/graph2-4">Graph 2.4</a></li> <!-- ✅ Nouveau lien -->
 
   </ul>
 </nav>
