Debug, afficher tt dans un seul page

--- a/src/app/components/graph-average-magasins/graph-average-magasins.component.html
+++ b/src/app/components/graph-average-magasins/graph-average-magasins.component.html
@@ -1,5 +1,5 @@
 <h2>📊 Nombre moyen de magasins par catégorie</h2>
-<app-filters (filterChange)="updateFilters($event)" [showAllCategories]="false"></app-filters> <!-- ✅ Ajout du paramètre -->
+<!-- ✅ Ajout du paramètre -->
 
 <!-- ✅ Diagramme -->
 <div *ngIf="isBrowser && pieChartData">
