--- a/src/app/components/graph3courbe/graph3courbe.component.html
+++ b/src/app/components/graph3courbe/graph3courbe.component.html
@@ -1,5 +1,5 @@
 <h2>📈 Détail Produit - Graphique 3 Courbes</h2>
-<app-filters (filterChange)="updateFilters($event)" [showAllCategories]="false"></app-filters> <!-- ✅ Ajout du paramètre -->
+<!-- ✅ Ajout du paramètre -->
 
 
 <!-- ✅ Graphique -->
