--- a/src/app/components/stats/stats.component.html
+++ b/src/app/components/stats/stats.component.html
@@ -1,5 +1,5 @@
 <h2>📊 Statistiques</h2>
-<app-filters (filterChange)="updateFilters($event)" [showAllCategories]="true"></app-filters> <!-- ✅ Ajout du paramètre -->
+ <!-- ✅ Ajout du paramètre -->
 
 <!-- ✅ Graphique -->
 <div *ngIf="isBrowser">
