--- a/src/app/components/produits/produits.component.html
+++ b/src/app/components/produits/produits.component.html
@@ -21,5 +21,8 @@
     <div>
         <app-graph-average-magasins [catID]="catID" [date_debut]="date_debut" ></app-graph-average-magasins>
     </div>
+    <div>
+        <app-graph2-4 [catID]="catID" [fabID]="fabID"></app-graph2-4>
+    </div>
   </div>
 </div>
