--- a/src/app/components/store-count/store-count.component.html
+++ b/src/app/components/store-count/store-count.component.html
@@ -1,19 +1,18 @@
 <div class="store-count-container">
-    <div class="store-count-card">
-      <h3>Nombre de Magasins</h3>
-      <p>{{ totalMagasins ?? 'Chargement...' }}</p>
-    </div>
-    <div class="store-count-card">
-      <h3>Nombre de Fabricants (La concurence)</h3>
-      <p>{{ totalFabricants ?? 'Chargement...' }}</p>
-    </div>
-    <div class="store-count-card">
-      <h3>Moyenne Produits par Fabricant</h3>
-      <p *ngIf="avgProductsPerFab !== null">{{ avgProductsPerFab | number:'1.2-2' }}</p>
-      <p *ngIf="avgProductsPerFab === null">Sélectionner une période</p>
-    </div>
-
-
-    
+  <div class="store-count-card magasins">
+    <div class="icon">📦</div>
+    <h3>Nombre de Magasins</h3>
+    <p>{{ totalMagasins ?? '...' }}</p>
   </div>
-  
+  <div class="store-count-card fabricants">
+    <div class="icon">🏭</div>
+    <h3>Nombre de Fabricants</h3>
+    <p>{{ totalFabricants ?? '...' }}</p>
+  </div>
+  <div class="store-count-card moyenne">
+    <div class="icon">📊</div>
+    <h3>Moyenne Produits / Fabricant</h3>
+    <p *ngIf="avgProductsPerFab !== null">{{ avgProductsPerFab | number:'1.2-2' }}</p>
+    <p *ngIf="avgProductsPerFab === null">Sélectionner une période</p>
+  </div>
+</div>
