--- a/src/app/components/graph-average-magasins/graph-average-magasins.component.html
+++ b/src/app/components/graph-average-magasins/graph-average-magasins.component.html
@@ -1,11 +1,11 @@
-<h2>📊 Nombre moyen de magasins par catégorie</h2>
-<!-- ✅ Ajout du paramètre -->
+<div class="graph-card">
+  <h3>📊 Nombre moyen de magasins par catégorie</h3>
 
-<!-- ✅ Diagramme -->
-<div *ngIf="isBrowser && pieChartData">
-  <canvas baseChart
-    [data]="pieChartData"
-    [labels]="pieChartLabels"
-    [type]="pieChartType">
-  </canvas>
+  <div *ngIf="isBrowser && pieChartData" class="chart-container">
+    <canvas baseChart
+      [data]="pieChartData"
+      [labels]="pieChartLabels"
+      [type]="pieChartType">
+    </canvas>
+  </div>
 </div>
