--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,11 +3,7 @@
     <span class="icon">🚢</span> Pas Bateau de Thibault
   </div>
   <ul class="nav-links">
-    <li><a href="/">🏠 graph1</a></li>
-    <li><a href="/stats">📊 graph stats</a></li>  <!-- ✅ Redirection vers la nouvelle page -->
-    <li><a [routerLink]="['/detail-produit']">graph3courbe</a></li>
-    <li><a routerLink="/se-connecter">graph_avg</a></li>
-    <li><a routerLink="/graph2-4">Graph 2.4</a></li> <!-- ✅ Nouveau lien -->
+    <li><a href="/">🏠 Stats</a></li>
 
   </ul>
 </nav>
